--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo.png" class="Website logo" />
+          <img src="images/logo.png" class="logo" />
           <ul id="sidemenu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
-            <i class="fas fa-times" onclick="closemenu()"></i>
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+
+            <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
-          <i class="fas fa-bars" onclick="openmenu()"></i>
+          <i class="fa-solid fa-list" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
           <p>Software Developer</p>
@@ -43,14 +44,13 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Us</h1>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis
-              nulla quas qui minus odit cum, ducimus consequuntur quos velit.
-              Repudiandae, nihil nemo! Adipisci quaerat tempore eligendi
-              temporibus assumenda quis nobis, veritatis ullam illum ex totam.
-              Quisquam quos velit quae repellat quo? Aliquam harum, eum quam
-              ducimus aliquid nisi eveniet neque labore mollitia accusantium
-              sapiente enim veritatis illum! Dolor quos natus nobis ex odit
-              autem minus repellat, rem voluptatem totam?
+              Recent computer science graduate with a strong foundation in
+              programming and full-stack development. Eager to kickstart a
+              career as a full-stack developer, leveraging my academic knowledge
+              and a passion for creating efficient, scalable software solutions.
+              I have hands-on experience in coursework projects and internships.
+              I am a quick learner with excellent problem-solving abilities,
+              ready to contribute to a dynamic development team.
             </p>
 
             <div class="tab-titles">
@@ -66,27 +66,51 @@
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>Backend Development</span><br />Design database
-                  architecture
+                  <span>Backend Development</span><br />
+                  Developing schemas <br />developing APIs <br />
                 </li>
-                <li><span>Frontend Development</span><br />Create robust UI</li>
-                <li><span>Machine Learning</span><br />ML applications</li>
+                <li><span>Frontend Development</span><br />Create Robust UI</li>
+                <li>
+                  <span>Machine Learning</span><br />Machine Learning
+                  Applications
+                </li>
               </ul>
             </div>
 
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>Ineuron Intelligence</span><br />Full Stack Developer
+                  <span>INEURON INTELLIGENCE</span><br />Full Stack
+                  Developer(MERN) <br />
+                  <br />● Implemented JsonWebToken for authentication and
+                  authorization of login. <br />● Implemented pagination,
+                  CronJob, and transactions in mongo DB for multiple API
+                  instances. <br />● Designed a systematic database
+                  architecture, executed CRUD operations, and retrieved data
+                  using REST APIs. <br />● Designed robust frontend using React
+                  and the react framework, also integrate third party payment
+                  method . <br />● Generated comprehensive high-level and
+                  low-level documentation along with essential flowcharts
+                </li>
+                <li>
+                  <span>THE SPARKS FOUNDATION</span><br />Web Developer
+                  Intern<br />
+                  <br />● Developed Basic Banking system using MERN stack
+                  <br />● Developed several APIs, performed CRUD operations.
+                  <br />● Build robust frontend using HTML, CSS, Bootstrap 3.0,
+                  JavaScript.
                 </li>
               </ul>
             </div>
 
             <div class="tab-contents" id="education">
               <ul>
-                <li><span>Graduation</span><br />Gautam Buddha University</li>
-                <li><span>Intermidiate</span><br />kendriye Vidyalaya</li>
-                <li><span>high School</span><br />kendriye Vidyalaya</li>
+                <li>
+                  <span>GRADUATION</span><br />Gautam Buddha University
+                  <br />B.Tech(CSE)
+                </li>
+                <li><span>INTERMIDIATE</span><br />Kendriye Vidyalaya</li>
+                <li><span>HIGH SCHOOL</span><br />Kendriye Vidyalaya</li>
               </ul>
             </div>
           </div>
@@ -101,42 +125,48 @@
         <h1 class="sub-title">My work</h1>
         <div class="worklist">
           <div class="work">
-            <img src="images/user.png" />
+            <img src="images/pr2.jpg" />
             <div class="layer">
-              <h3>multiple Dissease Prediction System</h3>
+              <h3>SANDIUM</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-                eos rem libero? Dolorem, perspiciatis. Praesentium laboriosam
-                officia provident aut doloremque distinctio quas. Molestias,
-                quae autem temporibus aliquam quo laborum alias!
+                Three-Tier, Full Stack web application that can perform all
+                functions that a standard app can do. Utilized MVC architecture
+                for both Frontend and Backend development.Capable of handling
+                different functions of admin, user, and visitor with integrated
+                payment method.
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a href="https://github.com/sanidhya-kt/Sandium"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
           <div class="work">
-            <img src="images/user.png" />
+            <img src="images/pr1.jpg" />
             <div class="layer">
-              <h3>multiple Dissease Prediction System</h3>
+              <h3>MULTIPLE DISEASE PREDICTION SYSTEM</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-                eos rem libero? Dolorem, perspiciatis. Praesentium laboriosam
-                officia provident aut doloremque distinctio quas. Molestias,
-                quae autem temporibus aliquam quo laborum alias!
+                This is web application that can predict three
+                diseases(diabetes, Parkinson, Heart Disease) at one place. Used
+                Flask(python) server with Streamlit for frontend, capable of
+                retrieving data from local server and cloud database.
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a
+                href="https://github.com/sanidhya-kt/Multiple_Disease_predicition-heroku"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
           <div class="work">
-            <img src="images/user.png" />
+            <img src="images/pr3.jpg" />
             <div class="layer">
-              <h3>multiple Dissease Prediction System</h3>
+              <h3>BASIC BANKING SYSTEM</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-                eos rem libero? Dolorem, perspiciatis. Praesentium laboriosam
-                officia provident aut doloremque distinctio quas. Molestias,
-                quae autem temporibus aliquam quo laborum alias!
+                Created a basic banking system using express server, Mongo db
+                database and react for frontend.
               </p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <a href="https://github.com/sanidhya-kt/basic-banking-system"
+                ><i class="fa-solid fa-link"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -168,22 +198,39 @@
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </div>
-            <a href="images/SanidhyaTiwari_RESUME (2).pdf" download class="btn btn2">Download Resume</a>
+            <a
+              href="images/SanidhyaTiwari_RESUME (2).pdf"
+              download
+              class="btn btn2"
+              >Download Resume</a
+            >
           </div>
 
           <div class="contact-right">
-            <form>
-              <input type="text" name="name" placeholder="Your Name" required>
-              <input type="email" name="email" placeholder="Your Email" required>
-              <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+            <form name="submit-to-google-sheet">
+              <input type="text" name="name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
               <button type="submit" class="btn btn2 btn3">Submit</button>
             </form>
+            <span id="msg"></span>
           </div>
         </div>
       </div>
     </div>
     <div class="copyright">
-      <p>Copyright © <span>Sanidhya Kumar Tiwari</span>. All Rights Reserved.</p>
+      <p>
+        Copyright © <span>Sanidhya Kumar Tiwari</span>. All Rights Reserved.
+      </p>
     </div>
 
     <script>
@@ -200,6 +247,39 @@
         event.currentTarget.classList.add("active-links");
         document.getElementById(tabname).classList.add("active-tab");
       }
+    </script>
+
+    <script>
+      var sidemnu = document.getElementById("sidemenu");
+
+      function openmenu() {
+        sidemnu.style.right = "0";
+      }
+
+      function closemenu() {
+        sidemnu.style.right = "-150px";
+      }
+    </script>
+
+    <script>
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbz6TlhvJ_h49UGq-0JWTHamVixx_FYGChV6gA5_BucZcIh8cwA2K9PgF8rOdn6ypF28/exec";
+      const form = document.forms["submit-to-google-sheet"];
+      const msg = document.getElementById("msg");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+
+                msg.innerHTML = `THANK YOU! Your Response has been Recorded Successfully`;
+                setTimeout(function(){
+                  msg.innerHTML = "";
+                },5000)
+                form.reset();
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
     </script>
   </body>
 </html>
